--- a/index.html
+++ b/index.html
@@ -1,78 +1,357 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>English to Banjara Translator</title>
-    <meta name="description" content="Translate English to Banjara language with ease">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <title>Banjara Translator | English to Gor Bol</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            min-height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 20px;
+        }
+
+        .container {
+            background: white;
+            border-radius: 20px;
+            box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
+            max-width: 900px;
+            width: 100%;
+            padding: 40px;
+        }
+
+        h1 {
+            text-align: center;
+            color: #667eea;
+            margin-bottom: 10px;
+            font-size: 2.5em;
+        }
+
+        .subtitle {
+            text-align: center;
+            color: #666;
+            margin-bottom: 30px;
+            font-size: 1.1em;
+        }
+
+        .translator-box {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 20px;
+            margin-bottom: 20px;
+        }
+
+        .input-section,
+        .output-section {
+            display: flex;
+            flex-direction: column;
+        }
+
+        label {
+            font-weight: 600;
+            margin-bottom: 8px;
+            color: #333;
+            font-size: 1.1em;
+        }
+
+        textarea {
+            border: 2px solid #e0e0e0;
+            border-radius: 10px;
+            padding: 15px;
+            font-size: 16px;
+            font-family: inherit;
+            resize: vertical;
+            min-height: 150px;
+            transition: border-color 0.3s;
+        }
+
+        textarea:focus {
+            outline: none;
+            border-color: #667eea;
+        }
+
+        #outputText {
+            background: #f8f9fa;
+            color: #333;
+        }
+
+        .simplified-output {
+            margin-top: 10px;
+            padding: 15px;
+            background: #e8f4f8;
+            border-left: 4px solid #667eea;
+            border-radius: 8px;
+        }
+
+        .simplified-output strong {
+            color: #667eea;
+        }
+
+        button {
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            color: white;
+            border: none;
+            padding: 15px 40px;
+            font-size: 1.1em;
+            font-weight: 600;
+            border-radius: 10px;
+            cursor: pointer;
+            transition: transform 0.2s, box-shadow 0.2s;
+            margin: 0 auto;
+            display: block;
+        }
+
+        button:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 10px 20px rgba(102, 126, 234, 0.4);
+        }
+
+        button:active {
+            transform: translateY(0);
+        }
+
+        button:disabled {
+            opacity: 0.6;
+            cursor: not-allowed;
+        }
+
+        .stats {
+            text-align: center;
+            margin-top: 20px;
+            padding: 15px;
+            background: #f0f0f0;
+            border-radius: 10px;
+            color: #666;
+        }
+
+        .unknown-badge {
+            background: #ff6b6b;
+            color: white;
+            padding: 4px 8px;
+            border-radius: 5px;
+            font-size: 0.9em;
+            margin-left: 5px;
+        }
+
+        .loader {
+            display: none;
+            border: 3px solid #f3f3f3;
+            border-top: 3px solid #667eea;
+            border-radius: 50%;
+            width: 30px;
+            height: 30px;
+            animation: spin 1s linear infinite;
+            margin: 10px auto;
+        }
+
+        @keyframes spin {
+            0% {
+                transform: rotate(0deg);
+            }
+
+            100% {
+                transform: rotate(360deg);
+            }
+        }
+
+        .footer {
+            text-align: center;
+            margin-top: 20px;
+            color: #999;
+            font-size: 0.9em;
+        }
+
+        @media (max-width: 768px) {
+            .translator-box {
+                grid-template-columns: 1fr;
+            }
+        }
+    </style>
 </head>
+
 <body>
     <div class="container">
-        <header class="header">
-            <h1 class="title">Banjara Translator</h1>
-            <p class="subtitle">Bridging languages, connecting cultures</p>
-        </header>
+        <h1>🌐 Banjara Translator</h1>
+        <p class="subtitle">English → Gor Bol (Banjara)</p>
 
-        <main class="translator-wrapper">
-            <div class="translator-card">
-                <!-- English Input Section -->
-                <div class="input-section">
-                    <div class="language-label">
-                        <span class="label-text">English</span>
-                        <div class="label-indicator"></div>
-                    </div>
-                    <textarea 
-                        id="englishInput" 
-                        class="text-input" 
-                        placeholder="Type or paste English text here..."
-                        rows="6"
-                    ></textarea>
-                    <div class="char-count">
-                        <span id="charCount">0</span> characters
-                    </div>
-                </div>
-
-                <!-- Translate Button -->
-                <div class="button-wrapper">
-                    <button id="translateBtn" class="translate-btn">
-                        <span class="btn-text">Translate</span>
-                        <svg class="btn-icon" width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M14 5L21 12M21 12L14 19M21 12H3" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                        </svg>
-                    </button>
-                </div>
-
-                <!-- Banjara Output Section -->
-                <div class="output-section">
-                    <div class="language-label">
-                        <span class="label-text">Banjara (ಬಂಜಾರ)</span>
-                        <div class="label-indicator active"></div>
-                    </div>
-                    <div id="banjaraOutput" class="text-output">
-                        <span class="placeholder-text">Translation will appear here...</span>
-                    </div>
-                    <div class="output-actions">
-                        <button id="copyBtn" class="action-btn" disabled>
-                            <svg width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M8 4V16C8 17.1046 8.89543 18 10 18H18C19.1046 18 20 17.1046 20 16V7.24162C20 6.7034 19.7831 6.18789 19.3982 5.81161L16.6569 3.11612C16.2811 2.74856 15.7722 2.54285 15.2426 2.54285H10C8.89543 2.54285 8 3.43828 8 4.54285V4Z" stroke="currentColor" stroke-width="2"/>
-                                <path d="M16 18V20C16 21.1046 15.1046 22 14 22H6C4.89543 22 4 21.1046 4 20V9C4 7.89543 4.89543 7 6 7H8" stroke="currentColor" stroke-width="2"/>
-                            </svg>
-                            <span>Copy</span>
-                        </button>
-                    </div>
-                </div>
+        <div class="translator-box">
+            <div class="input-section">
+                <label for="inputText">English Text</label>
+                <textarea id="inputText" placeholder="Type English text here...">Hello, how are you?</textarea>
             </div>
-        </main>
 
-        <footer class="footer">
-            <p>Preserving the beauty of Banjara language</p>
-        </footer>
+            <div class="output-section">
+                <label for="outputText">Banjara (Phonetic)</label>
+                <textarea id="outputText" readonly placeholder="Translation will appear here..."></textarea>
+                <div class="simplified-output" id="simplifiedOutput"></div>
+            </div>
+        </div>
+
+        <button onclick="translate()" id="translateBtn">Translate ⚡</button>
+        <div class="loader" id="loader"></div>
+
+        <div class="stats" id="stats">
+            📚 Loading dictionary...
+        </div>
+
+        <div class="footer">
+            Built with ❤️ for the Banjara community
+        </div>
     </div>
 
-    <script src="script.js"></script>
+    <script>
+        // Dictionary storage
+        let dictionary = {};
+        let totalWords = 0;
+
+        // Load CSV dictionary
+        async function loadDictionary() {
+            try {
+                const response = await fetch('dictionary_master_english.csv');
+                const csvText = await response.text();
+
+                // Parse CSV
+                const lines = csvText.split('\n');
+                let count = 0;
+
+                // Skip header
+                for (let i = 1; i < lines.length; i++) {
+                    const line = lines[i].trim();
+                    if (!line) continue;
+
+                    // Parse CSV line (handle quoted fields)
+                    const match = line.match(/^(\d+),("(?:[^"]|"")*"|[^,]*),([^,]*),([^,]*),([^,]*),(.*)$/);
+                    if (match) {
+                        const english = match[2].replace(/^"|"$/g, '').toLowerCase().trim();
+                        const pos = match[3].trim();
+                        const phonetics = match[5].trim();
+                        const simplified = match[6].trim();
+
+                        if (english && phonetics) {
+                            if (!dictionary[english]) {
+                                dictionary[english] = [];
+                            }
+                            dictionary[english].push({ phonetics, simplified, pos });
+                            count++;
+                        }
+                    }
+                }
+
+                totalWords = Object.keys(dictionary).length;
+                document.getElementById('stats').innerText = `📚 Dictionary: ${totalWords} words loaded`;
+                document.getElementById('translateBtn').disabled = false;
+
+                console.log(`Loaded ${totalWords} unique words`);
+            } catch (error) {
+                document.getElementById('stats').innerText = '❌ Error loading dictionary';
+                console.error('Dictionary load error:', error);
+            }
+        }
+
+        // Tokenize text
+        function tokenize(text) {
+            const tokens = text.match(/\b\w+\b|[^\w\s]/g) || [];
+            return tokens.map(token => ({
+                word: token,
+                isWord: /^[a-zA-Z]+$/.test(token)
+            }));
+        }
+
+        // Translate word
+        function translateWord(word) {
+            const lower = word.toLowerCase();
+            if (dictionary[lower] && dictionary[lower].length > 0) {
+                const entry = dictionary[lower][0];
+                return {
+                    original: word,
+                    phonetics: entry.phonetics,
+                    simplified: entry.simplified,
+                    found: true
+                };
+            }
+            return {
+                original: word,
+                phonetics: word,
+                simplified: word,
+                found: false
+            };
+        }
+
+        // Main translate function
+        function translate() {
+            const inputText = document.getElementById('inputText').value.trim();
+
+            if (!inputText) {
+                alert('Please enter some text to translate');
+                return;
+            }
+
+            if (totalWords === 0) {
+                alert('Dictionary is still loading. Please wait...');
+                return;
+            }
+
+            // Show loader
+            document.getElementById('loader').style.display = 'block';
+            document.getElementById('outputText').value = 'Translating...';
+            document.getElementById('simplifiedOutput').innerHTML = '';
+
+            // Small delay for UI update
+            setTimeout(() => {
+                const tokens = tokenize(inputText);
+                let phoneticsParts = [];
+                let simplifiedParts = [];
+                let unknownCount = 0;
+
+                tokens.forEach(token => {
+                    if (token.isWord) {
+                        const result = translateWord(token.word);
+                        phoneticsParts.push(result.phonetics);
+                        simplifiedParts.push(result.simplified);
+                        if (!result.found) unknownCount++;
+                    } else {
+                        phoneticsParts.push(token.word);
+                        simplifiedParts.push(token.word);
+                    }
+                });
+
+                // Display results
+                document.getElementById('outputText').value = phoneticsParts.join(' ');
+
+                let simplifiedHTML = `<strong>Simplified:</strong> ${simplifiedParts.join(' ')}`;
+                if (unknownCount > 0) {
+                    simplifiedHTML += ` <span class="unknown-badge">${unknownCount} unknown word${unknownCount > 1 ? 's' : ''}</span>`;
+                }
+                document.getElementById('simplifiedOutput').innerHTML = simplifiedHTML;
+
+                // Hide loader
+                document.getElementById('loader').style.display = 'none';
+            }, 100);
+        }
+
+        // Allow Enter to translate
+        document.getElementById('inputText').addEventListener('keydown', function (e) {
+            if (e.key === 'Enter' && !e.ctrlKey && !e.shiftKey) {
+                e.preventDefault();
+                translate();
+            }
+        });
+
+        // Load dictionary on page load
+        document.getElementById('translateBtn').disabled = true;
+        loadDictionary();
+    </script>
 </body>
+
 </html>
