Update Firebase config with new BanjaraWeb API key

--- a/translate.html
+++ b/translate.html
@@ -309,13 +309,13 @@
     <script>
         // Firebase Configuration
         const firebaseConfig = {
-            apiKey: "AIzaSyAeW0tNBQay4Q24QTzJoyBu0FcxyAhodSQ",
+            apiKey: "AIzaSyBln9Qh4trV-Va-49FRqIIdjOZqpw4whE",
             authDomain: "banjaraai.firebaseapp.com",
             projectId: "banjaraai",
             storageBucket: "banjaraai.firebasestorage.app",
             messagingSenderId: "669417689803",
-            appId: "1:669417689803:web:5c9c222d91b0e95e7f814e",
-            measurementId: "G-BJZ16PXFBE"
+            appId: "1:669417689803:web:b0fa3edf4debf8777f814e",
+            measurementId: "G-Z2WRYD73EF"
         };
 
         // Initialize Firebase
